--- a/src/index.css
+++ b/src/index.css
@@ -38,9 +38,9 @@ h1 {
 }
 
 button {
-  border-radius: 8px;
+  border-radius: 4px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  padding: 1px 10px 4px 10px;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
@@ -65,6 +65,6 @@ button:focus-visible {
     color: #747bff;
   }
   button {
-    background-color: #f9f9f9;
+    background-color: #e5e5e5;
   }
 }
