--- a/src/App.css
+++ b/src/App.css
@@ -377,6 +377,19 @@
 .btnTabsMain {
   margin-right: 10px;
 }
+.modalMenuWeekBack {
+    display: none;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgb(0 0 0 / 0.2);
+    z-index: 10;
+}
+.modalMenuWeekBack.active {
+  display: block;
+}
  @media(min-width: 1024px) {
     .popularIngredientsListBlock {
       padding: 30px;
